--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,10 @@
+@if(isLogged){
 <app-header></app-header>
 <app-navbar></app-navbar>
+}
+
 <router-outlet></router-outlet>
+@if(isLogged){
+
 <app-footer></app-footer>
+}
