--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -1,3 +1,7 @@
+@if (isLoading) {
+<app-loading-spinner></app-loading-spinner>
+}
+
 <!-- breadcrumbs  -->
 <div>
   <nav class="mx-auto w-full mt-4 max-w-[1200px] px-5">
