--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -85,7 +85,6 @@
       </li>
     </ul>
   </div>
-
   <div class="hidden gap-3 md:!flex">
     <a
       routerLink="profile/wishlist"
@@ -111,7 +110,7 @@
 
     <a
       href="cart.html"
-      class="flex cursor-pointer flex-col items-center justify-center"
+      class="relative flex cursor-pointer flex-col items-center justify-center"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -127,6 +126,11 @@
       </svg>
 
       <p class="text-xs">Cart</p>
+      <div
+        class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900"
+      >
+        {{ data }}
+      </div>
     </a>
 
     <a
@@ -156,7 +160,6 @@
           d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
         />
       </svg>
-
       <p class="text-xs">Account</p>
     </a>
   </div>
