fix(profile): show image and styling

--- a/client/src/app/components/profile-information/profile-information.component.html
+++ b/client/src/app/components/profile-information/profile-information.component.html
@@ -1,16 +1,18 @@
 <!-- form -->
 <div class="py-5">
-  <div class="w-full">
+  <!-- <div class="w-full">
     <div
-      class="mx-auto mb-5 flex flex-row items-center bg-neutral-100 py-5 lg:mx-0 lg:w-1/2"
+      class=" mb-5 flex flex-row items-center  py-5 lg:mx-0 lg:w-1/2"
     >
-      <img
-        class="ml-5 h-20 w-20 rounded-full"
-        src="{{ userInfo.image }}"
-        alt="{{ userInfo.fullName }}"
-      />
+      <div class=" ml-5 h-20 w-20 p-1 bg-neutral-100">
+        <img
+          class="w-full rounded-full"
+          src="{{ userInfo.image }}"
+          alt="{{ userInfo.fullName }}"
+        />
+      </div>
     </div>
-  </div>
+  </div> -->
   <form class="flex w-full flex-col gap-3" action="">
     <div class="flex w-full flex-col">
       <label class="flex" for="name">
