--- a/client/src/app/layouts/profile/profile.component.html
+++ b/client/src/app/layouts/profile/profile.component.html
@@ -207,5 +207,7 @@
   @if (showAccount) {
   <app-account></app-account>
   }
-  <router-outlet></router-outlet>
+  <div class="w-full">
+    <router-outlet></router-outlet>
+  </div>
 </section>
