--- a/client/src/app/components/edit-profile/edit-profile.component.html
+++ b/client/src/app/components/edit-profile/edit-profile.component.html
@@ -1,6 +1,8 @@
 <!-- form  -->
-<section class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10">
-  <div class="py-5">
+<section
+class="container mx-auto my-3 flex w-full flex-col gap-3 px-4"
+>
+  <div class="py-5 w-full">
     <div class="w-full">
       <h2>Avatar image</h2>
       <div
@@ -8,7 +10,7 @@
       >
         <img
           class="ml-5 h-20 w-20 rounded-full"
-          [src]="userForm.get('image')?.value"
+          [src]="userInfo.image"
           [alt]="userForm.get('fullName')?.value"
         />
 
