fix(cart): cart linking

--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -190,7 +190,7 @@
           <p>{{ totalPrice | currency }}</p>
         </div>
 
-        <a href="checkout-address.html">
+        <a [routerLink]="['/check-out']">
           <button class="w-full bg-violet-900 px-5 py-2 text-white">
             Proceed to checkout
           </button>
