--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -109,7 +109,7 @@
     </a>
 
     <a
-      href="cart.html"
+    routerLink="/cart"
       class="relative flex cursor-pointer flex-col items-center justify-center"
     >
       <svg
@@ -126,11 +126,13 @@
       </svg>
 
       <p class="text-xs">Cart</p>
+      @if(isAuthenticated()){
       <div
-        class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900"
+        class="absolute inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-red-500  rounded-full -top-2 -end-2"
       >
         {{ data }}
       </div>
+      }
     </a>
 
     <a
@@ -194,7 +196,7 @@
       </a>
 
       <a
-        href="cart.html"
+        routerLink="/cart"
         class="flex cursor-pointer flex-col items-center justify-center"
       >
         <svg
