Refactor:  profile-related components and add sidebar component

--- a/client/src/app/components/profile-information/profile-information.component.html
+++ b/client/src/app/components/profile-information/profile-information.component.html
@@ -1,75 +1,60 @@
-<!-- form -->
-<div class="py-5">
-  <!-- <div class="w-full">
-    <div
-      class=" mb-5 flex flex-row items-center  py-5 lg:mx-0 lg:w-1/2"
-    >
-      <div class=" ml-5 h-20 w-20 p-1 bg-neutral-100">
-        <img
-          class="w-full rounded-full"
-          src="{{ userInfo.image }}"
-          alt="{{ userInfo.fullName }}"
-        />
+<section class="container flex-grow mx-auto max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10">
+  <app-sidebar [userInfo]="userInfo"></app-sidebar>
+
+  <section class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10">
+    <div class="py-5">
+      <div class="w-full">
+        <h2>Avatar image</h2>
+        <div class="mx-auto mb-5 flex flex-row items-center bg-neutral-100 py-5 lg:mx-0 lg:w-1/2">
+          <img class="ml-5 h-20 w-20 rounded-full" src="{{userInfo.image}}" alt="Sarah Johnson image" />
+
+          <form>
+            <div>
+              <label class="block">
+                <span class="sr-only">Choose profile photo</span>
+                <input type="file"
+                  class="mx-auto ml-5 flex w-full justify-center border-yellow-400 text-sm outline-none file:mr-4 file:bg-amber-400 file:py-2 file:px-4 file:text-sm file:font-semibold" />
+              </label>
+            </div>
+          </form>
+        </div>
       </div>
+
+      <form class="flex w-full flex-col gap-3" action="">
+        <div class="flex w-full flex-col">
+          <label class="flex" for="name">
+            Full Name
+            <span
+              class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"></span>
+          </label>
+          <input class="w-full border px-4 py-2 lg:w-1/2" type="text" value="{{ userInfo.fullName }}" readonly />
+        </div>
+        <div class="flex w-full flex-col">
+          <label class="flex" for="name">
+            Email
+            <span
+              class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"></span>
+          </label>
+          <input class="w-full border px-4 py-2 lg:w-1/2" type="text" value="{{ userInfo.email }}" readonly />
+        </div>
+        <div class="flex w-full flex-col">
+          <label class="flex" for="name">
+            Username
+            <span
+              class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"></span>
+          </label>
+          <input class="w-full border px-4 py-2 lg:w-1/2" type="text" value="{{ userInfo.username }}" readonly />
+        </div>
+        <div class="flex w-full flex-col">
+          <label class="flex" for="name">
+            Phone
+            <span
+              class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"></span>
+          </label>
+          <input class="w-full border px-4 py-2 lg:w-1/2" type="text" value="{{ userInfo.phone }}" readonly />
+        </div>
+      </form>
     </div>
-  </div> -->
-  <form class="flex w-full flex-col gap-3" action="">
-    <div class="flex w-full flex-col">
-      <label class="flex" for="name">
-        Full Name
-        <span
-          class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"
-        ></span>
-      </label>
-      <input
-        class="w-full border px-4 py-2 lg:w-1/2"
-        type="text"
-        value="{{ userInfo.fullName }}"
-        readonly
-      />
-    </div>
-    <div class="flex w-full flex-col">
-      <label class="flex" for="name">
-        Email
-        <span
-          class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"
-        ></span>
-      </label>
-      <input
-        class="w-full border px-4 py-2 lg:w-1/2"
-        type="text"
-        value="{{ userInfo.email }}"
-        readonly
-      />
-    </div>
-    <div class="flex w-full flex-col">
-      <label class="flex" for="name">
-        Username
-        <span
-          class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"
-        ></span>
-      </label>
-      <input
-        class="w-full border px-4 py-2 lg:w-1/2"
-        type="text"
-        value="{{ userInfo.username }}"
-        readonly
-      />
-    </div>
-    <div class="flex w-full flex-col">
-      <label class="flex" for="name">
-        Phone
-        <span
-          class="block text-sm font-medium text-slate-700 after:ml-0.5 after:text-red-500 after:content-['\*']"
-        ></span>
-      </label>
-      <input
-        class="w-full border px-4 py-2 lg:w-1/2"
-        type="text"
-        value="{{ userInfo.phone }}"
-        readonly
-      />
-    </div>
-  </form>
-</div>
+  </section>
+</section>>
 <!-- /form -->
